<resources>
    <string name="app_name">Buhorientate</string>
    <string name="web_client_id">1068662777607-or1t3k6eaqu8q641jqsh61ntov5rsuh8.apps.googleusercontent.com</string>
    <string name="prefs_file">com.example.buhorientate.PREFERENCE.FILE.KEY</string>
    <string name="email">Email</string>
    <string name="contrase_a">Contraseña</string>
    <string name="acceder">Acceder</string>
    <string name="registrarme">Registrarme</string>
    <string name="title_activity_hola">Hola</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="todo">TODO</string>
</resources>